# bih-rs

./: Cargo.toml  buddha.wobj
render/: Cargo.toml
render/src/: bih.rs  camera.rs  lib.rs  moller_trumbore.rs  scene.rs  trace.rs  traverse.rs  triaccel.rs  types.rs
src/: aabb.rs  bih.rs  lib.rs  main.rs  moller_trumbore.rs  perf.data  scene.rs  traverse.rs
wfront/: Cargo.toml
wfront/src/: lib.rs  loader.rs
