[package]
name = "bih-rs"
version = "0.1.0"
authors = ["Ilias Garnier <ilias.garnier@nomadic-labs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
ultraviolet="0.9.0"
tobj="3.2.3"
libc="0.2.76"
raylib="3.7.0"
clap = { version = "4.2.7", features = ["derive"] }
render = { path="./render" }
wfront = { path="./wfront" }
wide = "0.7.4"
