[package]
name = "render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
ultraviolet="0.9.0"
libc="0.2.76"
raylib="3.7.0"
wfront = { path="../wfront" }